# multi-agent-supply-chain-project-1

./: .env.example  .gitignore  Dockerfile  LICENSE  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/: dependabot.yml
.github/workflows/: cd-production.yml  ci.yml  image-scan.yml  mlops.yml  security-scan.yml  terraform.yml
agents/: __init__.py  anomaly_detection_agent.py  base_agent.py  demand_forecast_agent.py  inventory_agent.py  logistics_agent.py  orchestrator_agent.py  order_agent.py  supplier_agent.py
aiops/automation/: auto_remediation.py
aiops/monitoring/: drift_detector.py
alembic/: env.py
alembic/versions/: 001_initial_schema.py
app/: main.py
app/api/v1/: router.py
app/core/: config.py  database.py  kafka_client.py  logging.py  redis_client.py  security.py  slack_notifier.py
app/middleware/: request_id.py  security.py
app/schemas/: agent.py  inventory.py  order.py  supplier.py
app/services/: order_service.py
app/tasks/: celery_app.py  supply_chain_tasks.py
docs/api/: openapi.yaml
docs/architecture/: supply-chain-architecture.drawio
infrastructure/kubernetes/configmaps/: app-config.yaml
infrastructure/kubernetes/deployments/: api-deployment.yaml  worker-deployment.yaml
infrastructure/kubernetes/hpa/: api-hpa.yaml
infrastructure/kubernetes/ingress/: ingress.yaml
infrastructure/kubernetes/jobs/: db-migration-job.yaml
infrastructure/kubernetes/namespaces/: namespace.yaml
infrastructure/kubernetes/network-policies/: network-policy.yaml
infrastructure/kubernetes/pdb/: pdb.yaml
infrastructure/kubernetes/rbac/: rbac.yaml
infrastructure/kubernetes/services/: api-service.yaml
infrastructure/terraform/: main.tf  outputs.tf  variables.tf
llmops/: cost_tracker.py  guardrails.py  prompt_registry.py
llmops/prompts/: orchestrator.json
ml/anomaly_detection/: train.py
ml/demand_forecast/: train.py
monitoring/alertmanager/: alertmanager.yml
monitoring/alertmanager/templates/: slack.tmpl
monitoring/prometheus/: prometheus.yml
monitoring/prometheus/rules/: api-alerts.yml  ml-alerts.yml  (+1 more)
old/: readme.md.bkp
scripts/: deploy.sh  init.sql  seed_data.py
security/: .gitleaks.toml  .owasp-suppressions.xml
tests/: conftest.py
tests/e2e/: test_smoke.py
tests/load/: locustfile.py
tests/unit/: test_agents.py  test_models.py
(+28 files in other folders)
